...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivNotifications"
            android:layout_width="@dimen/profile_top_bar_icon_size"
            android:layout_height="@dimen/profile_top_bar_icon_size"
            android:contentDescription="@string/cd_notifications"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
        android:background="@color/profile_header_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopDivider">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAdmin"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/profile_edit_bg"
...
                        app:srcCompat="@drawable/ic_profile_chevron_right"
                        app:tint="@color/profile_chevron" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_logout_height_exact"
                android:layout_marginTop="@dimen/profile_logout_top_margin"
                app:cardBackgroundColor="@color/profile_logout_bg"
                app:cardCornerRadius="@dimen/profile_logout_corner_radius"
...
