...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvClearAll"
            style="@style/AppTopBar.Action"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/app_top_bar_side_slot_size"
            android:minWidth="@dimen/app_top_bar_side_slot_size"
            android:text="@string/notifications_clear_all"
            android:visibility="gone"
...
        android:background="@color/ms_border_subtle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTopBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotifications"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/space_16"
        android:paddingTop="@dimen/space_12"
        android:paddingEnd="@dimen/space_16"
...
