...
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavNotifications"
            app:layout_constraintStart_toEndOf="@id/adminNavProduits"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavClientsIcon"
...
